code/human_written_tests/WebAssembly/processed_control_flow_validation/test_call_4.wast
(assert_invalid
  (module
    (func $arity-0-vs-2 (call 1))
    (func (param f64 i32))
  )
  "type mismatch"
)